# ProxySite

./: .gitignore  README.md  config.py  database.py  main.py  models.py  parser.py  ping.py  pyproject.toml  telethon_client.py
data/: proxies.db
static/: app.js  styles.css
styles/: globals.css
templates/: index.html
