[project]
name = "mtproto-proxy-hub"
version = "1.0.0"
description = "MTProto Proxy aggregator with voting system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[[tool.uv.index]]
name = "termux-pydantic"
url = "https://termux-user-repository.github.io/pypi/pydantic-core/"
format = "flat"
explicit = true

[tool.uv.sources]
pydantic-core = [
    { index = "termux-pydantic", marker = "sys_platform == 'android'" },
]

[tool.ruff]
exclude = ["depr", "scripts", ".venv"]
unsafe-fixes = true
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "W",
    "F",
    "Q",
    "I",
    "UP",
    "PERF",
    "ASYNC",
    "C4",
    "ISC",
    "RET",
    "FURB",
    "FLY",
    "TRY",
    "PTH",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-type-arguments = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
